--- a/backend/users/package.json
+++ b/backend/users/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js",
-    "lint": "eslint . --ext .ts"
+    "start": "npm run build && node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +15,13 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "eslint": "^8.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.15",
+    "prettier": "2.6.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
@@ -27,8 +29,9 @@
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
+    "eslint-config-prettier": "^8.5.0",
     "express": "^4.17.3",
-    "prettier": "^2.6.2",
+    "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0",
     "yamljs": "^0.3.0"
   }
