--- a/backend/users/package.json
+++ b/backend/users/package.json
@@ -29,8 +29,10 @@
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
+    "dotenv": "^16.0.0",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.17.3",
+    "mongodb": "^4.5.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0",
     "yamljs": "^0.3.0"
