ready for development

--- a/server/users/tsconfig.json
+++ b/server/users/tsconfig.json
@@ -23,6 +23,7 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
     "noImplicitAny": true,                               /* Enable error reporting for expressions and declarations with an implied `any` type.. */
                    /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true , 
+    "types": ["webrtc"]                               /* Skip type checking all .d.ts files. */
   }
 }
