--- a/server/users/package.json
+++ b/server/users/package.json
@@ -13,8 +13,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.23",
+    "@types/node": "^17.0.34",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/webrtc": "^0.0.32",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.14.0",
@@ -27,12 +33,14 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@types/swagger-ui-express": "^4.1.3",
-    "@types/yamljs": "^0.2.31",
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "mongodb": "^4.5.0",
+    "mongoose": "^6.3.4",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0",
     "yamljs": "^0.3.0"
